# DS-Store-Recovery

./: .gitignore  LICENSE  README.md  ds_store_recovery.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ds_store_disclosure.md
tests/: test_ds_store_recovery.py
