[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-store-recovery"
version = "0.1.0"
description = "Recover file and directory structures exposed via .DS_Store"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "DS Store Recovery Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.31.0",
  "ds-store>=1.3.1,<2"
]
keywords = ["ds_store", "security", "forensics", "recovery"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
ds-store-recovery = "ds_store_recovery:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[tool.setuptools]
py-modules = ["ds_store_recovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
